# currency-api

./: README.md  pyproject.toml
src/currency_api/: server.py
src/currency_api/dao/blueprints/: __init__.py  currency_blueprint.py  metrics_blueprint.py
src/currency_api/data/connectors/: __init__.py  connector.py
src/currency_api/data/connectors/apis/: __init__.py  frankfurter_connector.py  freecurrency_connector.py
src/currency_api/data/types/: __init__.py  currency.py  currency_rates.py
src/currency_api/utils/: metrics.py
tests/unittests/utils/: metrics_test.py
